test/scc/stmt/semantic-errors/040.a
040.t:3:18: error: a break statement may only be used within a loop or switch